Fix text align to left

--- a/src/components/extrapage/style.css
+++ b/src/components/extrapage/style.css
@@ -29,6 +29,7 @@
 
   .content {
     padding: 80px 80px 80px 80px;
+    text-align: left;
   }
 
   .content ul {
